--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -4,6 +4,10 @@ nav {
   align-items: center;
   justify-content: space-between;
   z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 nav .brand {
   cursor: pointer;
