--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,3 +48,11 @@ h6 {
   color: var(--c-title);
   font-weight: bold;
 }
+
+input {
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 10px;
+  color: var(--c-foreground);
+}
