add: session collab, question assignment

--- a/client/src/pages/SessionPage/SessionPage.css
+++ b/client/src/pages/SessionPage/SessionPage.css
@@ -7,6 +7,9 @@
   display: flex;
   gap: 5px;
   padding: 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .control-panel button {
@@ -34,4 +37,8 @@
   bottom: 30px;
   left: 360px;
   box-sizing: border-box;
+}
+
+.question-container-vc {
+  display: none;
 }
